# thants

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pre-merge.yaml  release.yaml
src/thants/: actions.py  env.py  generator.py  observations.py  rewards.py  signals.py  specs.py  steps.py  types.py  utils.py  viewer.py
src/thants/basic/: __init__.py  colony_generator.py  env.py  observations.py  rewards.py  steps.py  types.py  viewer.py
src/thants/basic/generators/: ants.py
src/thants/common/: actions.py  rewards.py  signals.py  specs.py  steps.py  types.py  utils.py
src/thants/envs/: __init__.py  mono.py  multi.py  presets.py
src/thants/generators/: ants.py  food.py  terrain.py
src/thants/mono/: __init__.py  colony_generator.py  env.py  observations.py  rewards.py  steps.py  types.py  viewer.py
src/thants/multi/: __init__.py  colonies_generator.py  env.py  observations.py  rewards.py  steps.py  types.py  viewer.py
tests/: test_actions.py  test_env.py  test_generator.py  test_generators.py  test_observations.py  test_rewards.py  test_signals.py  test_steps.py  test_utils.py  test_viewer.py
tests/test_basic/: conftest.py  test_actions.py  test_colony_generator.py  test_env.py  test_generators.py  test_movement.py  test_observations.py  test_signals.py  test_steps.py  test_utils.py
tests/test_basic/test_steps/: test_signals.py  test_update_food.py
tests/test_common/: test_actions.py  test_generators.py  test_rewards.py  test_signals.py
tests/test_envs/: test_mono.py  test_multi.py  test_presets.py
tests/test_generators/: test_food_generator.py  test_mono_colony_generators.py  test_multi_colony_generators.py  test_utils.py
tests/test_mono/: test_env.py
tests/test_multi/: test_colony_generator.py  test_env.py  test_observations.py  test_rewards.py  test_steps.py
tests/test_steps/: test_movement.py  test_signals.py  test_update_food.py
(+5 files in other folders)
